--- a/src/index.html
+++ b/src/index.html
@@ -1,71 +1,84 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Darts Counter</title>
-    <link rel="shortcut icon" href="./assets/images/favicon.ico">
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/bootstrap.css">
+    <link rel="shortcut icon" href="./assets/images/favicon.ico" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <!-- <link rel="stylesheet" href="./css/bootstrap.css"> -->
     <script src="./js/main.js" defer></script>
 
-    <meta property="og:title" content="Таймер для игры «Splendor»" />
-    <meta property="og:description" content="Каждый игрок полуает определенное количество минут, а также секунд за каждый ход" />
-    <meta property="og:image" content="https://myupopov.github.io/board_games_timer/dist/images/og_image.png" />
+    <!-- <meta property="og:title" content="Таймер для игры «Splendor»" /> -->
+    <!-- <meta property="og:description" content="Каждый игрок полуает определенное количество минут, а также секунд за каждый ход" /> -->
+    <!-- <meta property="og:image" content="https://myupopov.github.io/board_games_timer/dist/images/og_image.png" /> -->
   </head>
 
   <body class="">
-    <header class="header">
-      <select name="playersNumber" id="select_playersNumber">
-        <option value="2">2 игрока</option>
-        <option value="3">3 игрока</option>
-        <option value="4">4 игрока</option>
-        <option value="1">Одиночная</option>
-      </select>
-      <select name="timeRemaining" id="select_timeRemaining">
-        <option value="Classic">Classic mode</option>
-        <option value="Art">Art mode</option>
-        <option value="Cartoon">Cartoon mode</option>
-      </select>
-      <select name="addingTime" id="select_addingTime">
-        <option value="501">501</option>
-        <option value="401">401</option>
-        <option value="301">301</option>
-        <!-- <option value="0">Набор</option> -->
-      </select>
-      <button class="header__button" id="start_game">ОК</button>
-    </header>
-    <footer class="footer">
-      <div class="footer-left">
-        <div class="total-timer">0 мин 0 сек</div>
+    <header>
+      <div class="header header-init">
+        <div class="row">
+          <select name="playersNumber" id="select_playersNumber">
+            <option value="2">2 игрока</option>
+            <option value="3">3 игрока</option>
+            <option value="4">4 игрока</option>
+            <option value="1">Одиночная</option>
+          </select>
+          <button class="header-init__button" id="start_game">ОК</button>
+        </div>
+        <div class="row">
+          <select name="timeRemaining" id="select_timeRemaining">
+            <option value="Classic">Classic mode</option>
+            <option value="Art">Art mode</option>
+            <option value="Cartoon">Cartoon mode</option>
+          </select>
+          <select name="addingTime" id="select_addingTime">
+            <option value="501">501</option>
+            <option value="401">401</option>
+            <option value="301">301</option>
+            <!-- <option value="0">Набор</option> -->
+          </select>
+        </div>
       </div>
-      <div class="round_counter">
-        <label class="round_counter__label">Круг: </label>
-        <label class="round_counter__counter"></label>
-      </div>
-      <div class="footer-right">
-        <button class="footer__button" id="avatar_mode">ПАУЗА</button>
-      </div>
-    </footer>
 
+      <div class="header header-game">
+        <div class="row">
+          <div class="header-game-right">
+            <button class="header-game__button" id="avatar_mode">НАЗАД</button>
+          </div>
+          <div class="header-game-right">
+            <button class="header-game__button" id="avatar_mode">ПАУЗА</button>
+          </div>
+        </div>
+        <div class="row">
+          <div class="header-game-left">
+            <div class="total-timer">0 мин 0 сек</div>
+          </div>
+          <div class="round_counter">
+            <label class="round_counter__label">Круг: </label>
+            <label class="round_counter__counter"></label>
+          </div>
+        </div>
+      </div>
+    </header>
 
     <main class="main">
       <div class="player player_1">
-        <div><img class="player__image" data-image="1" src="./assets/images/avatars/classic_mode/nobleman_1.png"></div>
-        <input class="player__input" placeholder="ИГРОК 1">
+        <div><img class="player__image" data-image="1" src="./assets/images/avatars/classic_mode/nobleman_1.png" /></div>
+        <input class="player__input" placeholder="ИГРОК 1" />
         <label class="player__label hidden">ИГРОК 1</label>
         <div class="player_1__timeRemaining"></div>
       </div>
       <div class="player player_2">
-        <div><img class="player__image" data-image="2" src="./assets/images/avatars/classic_mode/nobleman_2.png"></div>
-        <input class="player__input" placeholder="ИГРОК 2">
+        <div><img class="player__image" data-image="2" src="./assets/images/avatars/classic_mode/nobleman_2.png" /></div>
+        <input class="player__input" placeholder="ИГРОК 2" />
         <label class="player__label hidden">ИГРОК 2</label>
         <div class="player_2__timeRemaining"></div>
       </div>
       <div class="player player_3">
-        <div><img class="player__image" data-image="3" src="./assets/images/avatars/classic_mode/nobleman_3.png"></div>
-        <input class="player__input" placeholder="ИГРОК 3">
+        <div><img class="player__image" data-image="3" src="./assets/images/avatars/classic_mode/nobleman_3.png" /></div>
+        <input class="player__input" placeholder="ИГРОК 3" />
         <label class="player__label hidden">ИГРОК 3</label>
         <div class="player_3__timeRemaining"></div>
       </div>
