--- a/src/index.html
+++ b/src/index.html
@@ -42,19 +42,19 @@
         </div>
       </div>
 
-      <div class="header header-game">
+      <div class="header header-game" style="display: none">
         <div class="row">
-          <div class="header-game-right">
-            <button class="header-game__button" id="avatar_mode">НАЗАД</button>
-          </div>
-          <div class="header-game-right">
-            <button class="header-game__button" id="avatar_mode">ПАУЗА</button>
-          </div>
+          <!-- <div class="header-game-right"> -->
+          <button class="header-game__button" id="avatar_mode">НАЗАД</button>
+          <!-- </div> -->
+          <!-- <div class="header-game-right"> -->
+          <button class="header-game__button" id="avatar_mode">ПАУЗА</button>
+          <!-- </div> -->
         </div>
         <div class="row">
-          <div class="header-game-left">
-            <div class="total-timer">0 мин 0 сек</div>
-          </div>
+          <!-- <div class="header-game-left"> -->
+          <div class="total-timer">0 мин 0 сек</div>
+          <!-- </div> -->
           <div class="round_counter">
             <label class="round_counter__label">Круг: </label>
             <label class="round_counter__counter"></label>
@@ -64,23 +64,28 @@
     </header>
 
     <main class="main">
-      <div class="player player_1">
-        <div><img class="player__image" data-image="1" src="./assets/images/avatars/classic_mode/nobleman_1.png" /></div>
-        <input class="player__input" placeholder="ИГРОК 1" />
-        <label class="player__label hidden">ИГРОК 1</label>
-        <div class="player_1__timeRemaining"></div>
+      <div class="player-avatars">
+        <div class="player player_1">
+          <div><img class="player__image" data-image="1" src="./assets/images/avatars/classic_mode/nobleman_1.png" /></div>
+          <input class="player__input" placeholder="ИГРОК 1" />
+          <label class="player__label hidden">ИГРОК 1</label>
+          <div class="player_1__timeRemaining"></div>
+        </div>
+        <div class="player player_2">
+          <div><img class="player__image" data-image="2" src="./assets/images/avatars/classic_mode/nobleman_2.png" /></div>
+          <input class="player__input" placeholder="ИГРОК 2" />
+          <label class="player__label hidden">ИГРОК 2</label>
+          <div class="player_2__timeRemaining"></div>
+        </div>
+        <div class="player player_3">
+          <div><img class="player__image" data-image="3" src="./assets/images/avatars/classic_mode/nobleman_3.png" /></div>
+          <input class="player__input" placeholder="ИГРОК 3" />
+          <label class="player__label hidden">ИГРОК 3</label>
+          <div class="player_3__timeRemaining"></div>
+        </div>
       </div>
-      <div class="player player_2">
-        <div><img class="player__image" data-image="2" src="./assets/images/avatars/classic_mode/nobleman_2.png" /></div>
-        <input class="player__input" placeholder="ИГРОК 2" />
-        <label class="player__label hidden">ИГРОК 2</label>
-        <div class="player_2__timeRemaining"></div>
-      </div>
-      <div class="player player_3">
-        <div><img class="player__image" data-image="3" src="./assets/images/avatars/classic_mode/nobleman_3.png" /></div>
-        <input class="player__input" placeholder="ИГРОК 3" />
-        <label class="player__label hidden">ИГРОК 3</label>
-        <div class="player_3__timeRemaining"></div>
+      <div class="score-points">
+
       </div>
     </main>
 
