--- a/src/index.html
+++ b/src/index.html
@@ -60,40 +60,40 @@
       <div class="main-wrapper">
 
         <div class="main__side">
-          <div class="player player_1">
-            <input class="player__input" placeholder="ИГРОК 1" />
-            <label class="player__label hidden">ИГРОК 1</label>
+          <div class="player">
+            <input class="player__input" placeholder="ИГРОК 1" type="text" required />
+            <!-- <label class="player__label hidden">ИГРОК 1</label> -->
             <div><img class="player__image" data-image="1" src="./assets/images/avatars/classic_mode/nobleman_1.png" /></div>
-            <div class="player_1__timeRemaining">1:06</div>
-            <div class="player_1__score">501</div>
+            <div class="player__time-remaining">1:06</div>
+            <div class="player__score">501</div>
           </div>
-          <div class="player player_2">
-            <input class="player__input" placeholder="ИГРОК 2" />
-            <label class="player__label hidden">ИГРОК 2</label>
+          <div class="player">
+            <input class="player__input" placeholder="ИГРОК 2" type="text" required />
+            <!-- <label class="player__label hidden">ИГРОК 2</label> -->
             <div><img class="player__image" data-image="2" src="./assets/images/avatars/classic_mode/nobleman_2.png" /></div>
-            <div class="player_2__timeRemaining"></div>
-            <div class="player_2__score"></div>
+            <div class="player__time-remaining"></div>
+            <div class="player__score"></div>
           </div>
-          <div class="player player_3">
-            <input class="player__input" placeholder="ИГРОК 3" />
-            <label class="player__label hidden">ИГРОК 3</label>
+          <div class="player">
+            <input class="player__input" placeholder="ИГРОК 3" type="text" required />
+            <!-- <label class="player__label hidden">ИГРОК 3</label> -->
             <div><img class="player__image" data-image="3" src="./assets/images/avatars/classic_mode/nobleman_3.png" /></div>
-            <div class="player_3__timeRemaining"></div>
-            <div class="player_3__score"></div>
+            <div class="player__time-remaining"></div>
+            <div class="player__score"></div>
           </div>
-          <div class="player player_4">
-            <input class="player__input" placeholder="ИГРОК 4" />
-            <label class="player__label hidden">ИГРОК 4</label>
+          <div class="player">
+            <input class="player__input" placeholder="ИГРОК 4" type="text" required />
+            <!-- <label class="player__label hidden">ИГРОК 4</label> -->
             <div><img class="player__image" data-image="4" src="./assets/images/avatars/classic_mode/nobleman_4.png" /></div>
-            <div class="player_4__timeRemaining"></div>
-            <div class="player_4__score"></div>
+            <div class="player__time-remaining"></div>
+            <div class="player__score"></div>
           </div>
         </div>
 
         <div class="main__side">
-          <div class="throw-input">
-            <input type="checkbox">
-            <select style="width: 70%">
+          <div class="score">
+            <input class="score__input score__double" type="checkbox">
+            <select class="score__input score__select">
               <option value="0">0</option>
               <option value="1">1</option>
               <option value="2">2</option>
@@ -117,11 +117,11 @@
               <option value="20">20</option>
               <option value="-">-</option>
             </select>
-            <input type="checkbox">
+            <input class="score__input score__triple" type="checkbox">
           </div>
-          <div class="throw-input">
-            <input type="checkbox">
-            <select style="width: 70%">
+          <div class="score">
+            <input class="score__input score__double" type="checkbox">
+            <select class="score__input  score__select">
               <option value="0">0</option>
               <option value="1">1</option>
               <option value="2">2</option>
@@ -144,11 +144,11 @@
               <option value="19">19</option>
               <option value="20">20</option>
               <option value="-">-</option>
-            <input type="checkbox">
+            <input class="score__input score__triple" type="checkbox">
           </div>
-          <div class="throw-input">
-            <input type="checkbox">
-            <select style="width: 70%">
+          <div class="score">
+            <input class="score__input  score__double" type="checkbox">
+            <select class="score__input score__select">
               <option value="0">0</option>
               <option value="1">1</option>
               <option value="2">2</option>
@@ -172,9 +172,9 @@
               <option value="20">20</option>
               <option value="-">-</option>
             </select>
-            <input type="checkbox">
+            <input class="score__input score__triple" type="checkbox">
           </div>
-          <button style="height: 20px"></button>
+          <button class="score__button header__button">ХОД</button>
         </div>
 
       </div>
